<resources>
    <string name="app_name">波迪拜客</string>
    <string name="main_radiobtn_training">训练</string>
    <string name="main_radiobtn_find">发现</string>
    <string name="main_radiobtn_chatting">趣聊</string>
    <string name="main_radiobtn_mine">我的</string>
    <string name="register">注册</string>
    <string name="login">登陆</string>
    <string name="next">下一步</string>
    <string name="yes">确定</string>
    <string name="user_registration_agreement">我已阅读并同《用户注册协议》</string>
    <string name="quick_login">第三方快捷登录</string>
    <string name="weixin">微信</string>
    <string name="qq">QQ</string>
    <string name="xinlang">新浪</string>
</resources>
