<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/Black">
    <ImageView
        android:id="@+id/register_phone_num_beijing_img"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/register_beijing_2x"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <!--头部-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:orientation="horizontal"
            android:paddingLeft="12dp"
            android:paddingRight="15dp"
            android:id="@+id/relativeLayout2">

            <ImageView
                android:id="@+id/register_title_left"
                android:layout_width="12dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:background="@mipmap/lift_return_2x" />
            <ImageView
                android:id="@+id/register_title"
                android:layout_width="112dp"
                android:layout_height="25dp"
                android:layout_marginLeft="79dp"
                android:layout_marginRight="80dp"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:background="@mipmap/main_title_2x"/>
            <TextView
                android:id="@+id/register_title_right_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_margin="5dp"
                android:text="@string/login"
                android:textSize="16sp"
                android:textColor="@color/White"/>
        </RelativeLayout>
        <!--输入手机号-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="25dp">
            <EditText
                android:id="@+id/register_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="67dp"
                android:inputType="number"
                android:hint="请输入手机号"
                android:textColorHint="@color/add_text"
                android:textColor="@color/White"
                android:textSize="16dp"/>
            <TextView
                android:id="@+id/register_Article"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_below="@+id/register_phone"
                android:background="@color/Gray_main"/>
            <CheckBox
                android:id="@+id/register_checkBox"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_below="@+id/register_Article"
                android:layout_marginTop="13dp"
                android:background="@color/White"
                android:checked="true"/>
            <TextView
                android:id="@+id/register_protocol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_registration_agreement"
                android:textSize="12sp"
                android:textColor="@color/White"
                android:layout_marginLeft="8dp"
                android:layout_alignTop="@+id/register_checkBox"
                android:layout_toRightOf="@+id/register_checkBox"/>
            <TextView
                android:id="@+id/register_register_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/complete_button"
                android:text="@string/next"
                android:textSize="16sp"
                android:textColor="@color/White"
                android:paddingBottom="14dp"
                android:paddingTop="14dp"
                android:paddingLeft="130dp"
                android:paddingRight="130dp"
                android:layout_marginTop="62dp"
                android:layout_below="@+id/register_Article"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <!--第三方快捷登录-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="15dp">
                <TextView
                    android:id="@+id/register_phone_disanfang"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/quick_login"
                    android:textSize="13sp"
                    android:textColor="@color/White"/>
                <!--qq-->
                <LinearLayout
                    android:id="@+id/register_phone_qq"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginTop="28dp"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/register_phone_q_q"
                        android:layout_below="@+id/register_phone_disanfang"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:background="@mipmap/register_qq_2x"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="12dp"
                        android:text="@string/qq"
                        android:textSize="12sp"
                        android:textColor="@color/Gray_main"/>
                </LinearLayout>
                <!--新浪-->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/register_phone_qq"
                    android:layout_toLeftOf="@+id/register_phone_qq"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/register_phone_xinlang"
                        android:layout_below="@+id/register_phone_disanfang"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:background="@mipmap/register_xinlang_2x"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="12dp"
                        android:text="@string/xinlang"
                        android:textSize="12sp"
                        android:textColor="@color/Gray_main"/>
                </LinearLayout>
                <!--微信-->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/register_phone_qq"
                    android:layout_toRightOf="@+id/register_phone_qq"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/register_phone_weixin"
                        android:layout_below="@+id/register_phone_disanfang"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:background="@mipmap/register_weixin_2x"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="12dp"
                        android:text="@string/weixin"
                        android:textSize="12sp"
                        android:textColor="@color/Gray_main"/>
                </LinearLayout>
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>