<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Black"
    android:fitsSystemWindows="true">
    <ImageView
        android:id="@+id/register_reset_password_beijing_img"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/register_beijing_2x"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <!--头部-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@color/Black"
            android:orientation="horizontal"
            android:paddingLeft="12dp"
            android:paddingRight="15dp">

            <ImageView
                android:id="@+id/retrieve_phone_title_left"
                android:layout_width="12dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:background="@mipmap/lift_return_2x" />

            <ImageView
                android:id="@+id/register_title"
                android:layout_width="112dp"
                android:layout_height="25dp"
                android:layout_centerInParent="true"
                android:layout_marginLeft="79dp"
                android:layout_marginRight="80dp"
                android:background="@mipmap/main_title_2x"
                android:gravity="center" />
        </RelativeLayout>
        <!--输入手机号-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="25dp">

            <EditText
                android:id="@+id/register_retrieve_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="67dp"
                android:background="@null"
                android:hint="请输入手机号"
                android:inputType="number"
                android:textColor="@color/White"
                android:textColorHint="@color/add_text"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/register_Article"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_below="@+id/register_retrieve_phone"
                android:background="@color/Gray_main" />

            <TextView
                android:id="@+id/register_retrieve_login_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/register_Article"
                android:layout_marginTop="40dp"
                android:background="@drawable/complete_button"
                android:paddingBottom="14dp"
                android:paddingLeft="130dp"
                android:paddingRight="130dp"
                android:paddingTop="14dp"
                android:text="@string/login"
                android:textColor="@color/White"
                android:textSize="16sp" />

            <!--第三方快捷登录-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="15dp">

                <TextView
                    android:id="@+id/register_phone_disanfang"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/quick_login"
                    android:textColor="@color/White"
                    android:textSize="13sp" />
                <!--qq-->
                <LinearLayout
                    android:id="@+id/register_phone_qq"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginTop="28dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/register_phone_q_q"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_below="@+id/register_phone_disanfang"
                        android:background="@mipmap/register_qq_2x" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="12dp"
                        android:text="@string/qq"
                        android:textColor="@color/Gray_main"
                        android:textSize="12sp" />
                </LinearLayout>
                <!--新浪-->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/register_phone_qq"
                    android:layout_toLeftOf="@+id/register_phone_qq"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/register_phone_xinlang"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_below="@+id/register_phone_disanfang"
                        android:background="@mipmap/register_xinlang_2x" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="12dp"
                        android:text="@string/xinlang"
                        android:textColor="@color/Gray_main"
                        android:textSize="12sp" />
                </LinearLayout>
                <!--微信-->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/register_phone_qq"
                    android:layout_toRightOf="@+id/register_phone_qq"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/register_phone_weixin"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_below="@+id/register_phone_disanfang"
                        android:background="@mipmap/register_weixin_2x" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="12dp"
                        android:text="@string/weixin"
                        android:textColor="@color/Gray_main"
                        android:textSize="12sp" />
                </LinearLayout>
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>