<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/Black">

    <ImageView
        android:id="@+id/register_login_beijing_img"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/register_beijing_2x"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <!--头部-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:orientation="horizontal"
            android:paddingLeft="12dp"
            android:paddingRight="15dp">

            <ImageView
                android:id="@+id/register_password_title_return"
                android:layout_width="12dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:background="@mipmap/lift_return_2x" />
            <ImageView
                android:id="@+id/register_password_title"
                android:layout_width="112dp"
                android:layout_height="25dp"
                android:layout_marginLeft="79dp"
                android:layout_marginRight="80dp"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:background="@mipmap/main_title_2x"/>
            <TextView
                android:id="@+id/register_password_title_right_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_margin="5dp"
                android:text="@string/register"
                android:textSize="16sp"
                android:textColor="@color/White"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="25dp">
            <EditText
                android:id="@+id/register_login_phono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:layout_marginTop="67dp"
                android:hint="请输入手机号"
                android:textColorHint="@color/add_text"
                android:textColor="@color/White"
                android:textSize="16dp"/>
            <TextView
                android:id="@+id/register_password_Article1"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_below="@+id/register_login_phono"
                android:layout_marginTop="4dp"
                android:background="@color/Gray_main"/>
            <EditText
                android:id="@+id/register_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:layout_marginTop="40dp"
                android:layout_below="@+id/register_password_Article1"
                android:hint="请输入密码（六位以上）"
                android:inputType="textPassword"
                android:textColorHint="@color/add_text"
                android:textColor="@color/White"
                android:textSize="16dp"/>
            <CheckBox
                android:id="@+id/register_login_password_visible_checkbox"
                android:layout_width="16dp"
                android:layout_height="13dp"
                android:background="@drawable/register_password"
                android:layout_alignTop="@+id/register_login_password"
                android:layout_alignParentRight="true"
                android:button="@null"/>
            <TextView
                android:id="@+id/register_Article2"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_below="@+id/register_login_password"
                android:layout_marginTop="4dp"
                android:background="@color/Gray_main"/>
            <TextView
                android:id="@+id/register_login_forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="想不起来密码了？"
                android:textSize="12sp"
                android:textColor="@color/Gray_main"
                android:layout_below="@+id/register_Article2"
                android:layout_marginTop="12dp"/>
            <TextView
                android:id="@+id/register_login_retrieve_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="找回试试！"
                android:textSize="12sp"
                android:textColor="@color/Gray_main"
                android:layout_alignTop="@+id/register_login_forget_password"
                android:layout_toRightOf="@+id/register_login_forget_password"/>

            <TextView
                android:id="@+id/register_password_next_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/complete_button"
                android:layout_centerHorizontal="true"
                android:text="@string/login"
                android:textSize="16sp"
                android:textColor="@color/White"
                android:paddingBottom="14dp"
                android:paddingTop="14dp"
                android:paddingLeft="130dp"
                android:paddingRight="130dp"
                android:layout_below="@+id/register_login_forget_password"
                android:layout_marginTop="40dp"/>
            <!--第三方快捷登录-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="15dp">
                <TextView
                    android:id="@+id/register_phone_disanfang"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/quick_login"
                    android:textSize="13sp"
                    android:textColor="@color/White"/>
                <!--qq-->
                <LinearLayout
                    android:id="@+id/register_phone_qq"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginTop="28dp"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/register_phone_q_q"
                        android:layout_below="@+id/register_phone_disanfang"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:background="@mipmap/register_qq_2x"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="12dp"
                        android:text="@string/qq"
                        android:textSize="12sp"
                        android:textColor="@color/Gray_main"/>
                </LinearLayout>
                <!--新浪-->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/register_phone_qq"
                    android:layout_toLeftOf="@+id/register_phone_qq"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/register_phone_xinlang"
                        android:layout_below="@+id/register_phone_disanfang"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:background="@mipmap/register_xinlang_2x"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="12dp"
                        android:text="@string/xinlang"
                        android:textSize="12sp"
                        android:textColor="@color/Gray_main"/>
                </LinearLayout>
                <!--微信-->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/register_phone_qq"
                    android:layout_toRightOf="@+id/register_phone_qq"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/register_phone_weixin"
                        android:layout_below="@+id/register_phone_disanfang"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:background="@mipmap/register_weixin_2x"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="12dp"
                        android:text="@string/weixin"
                        android:textSize="12sp"
                        android:textColor="@color/Gray_main"/>
                </LinearLayout>
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>